@@ -29,4 +29,3 @@ pipelines:
               - gmtkPrint -version
               - pip3 list
               - cd test && python run_tests.py
-
