@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-from __future__ import division, with_statement
+from __future__ import absolute_import, division, print_function, with_statement
 
 from __future__ import absolute_import
 from __future__ import print_function
