@@ -1,7 +1,6 @@
 #!/usr/bin/env python
-from __future__ import division
+from __future__ import absolute_import, division
 
-from __future__ import absolute_import
 from six.moves import zip
 __version__ = "$Revision$"
 
